--- a/index.html
+++ b/index.html
@@ -1,23 +1,21 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="style.css" rel="stylesheet" />
-    <title>Video Calling Platform</title>
-  </head>
-  <body>
-    <h1>Video Calling Platform</h1>
-    <div id="local-video-container">
-      <video id="local-video" autoplay playsinline></video>
+<head>
+  <title>Video Calling Platform</title>
+</head>
+<body>
+  <div class="video-container">
+    <div class="local-video">
+      <video id="localVideo" autoplay muted></video>
     </div>
-    <div id="remote-video-container">
-      <video id="remote-video" autoplay playsinline></video>
-    </div>
-    <div id="call-controls">
-      <button id="call-btn">Call</button>
-      <button id="hangup-btn">Hang up</button>
-    </div>
-    <script src="app.js"></script>
-  </body>
+    <div class="remote-videos"></div>
+  </div>
+  <div class="controls">
+    <button id="startCall">Start Call</button>
+    <button id="stopCall">Stop Call</button>
+  </div>
+
+  <script src="main.js"></script>
+</body>
 </html>
+
